# json-query

./: LICENSE  README.md  pyproject.toml
src/json_query/: cli.py
